# Nexuss_Embedding

./: CMakeLists.txt  Checklist.md  Core.cpp  Evaluate.cpp  Input.cpp  Metrics.cpp  Output.cpp  README.md  SPEC.md  Storage.cpp  Test.cpp  Train.cpp  dataset.py  hfaqe_main  main.cpp  run.sh  train
checkpoints/: hfaqe_best.nex  hfaqe_epoch_01.nex  hfaqe_epoch_02.nex  hfaqe_epoch_03.nex  hfaqe_epoch_04.nex  hfaqe_epoch_05.nex  hfaqe_step_0001000.nex
input/: Tokenizer.md
